[package]
name = "uwd2"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
pdb = "0.8.0"
sysinfo = "0.30.5"
ureq = "2.9.4"
winreg = "0.52.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security"
]
